# al-rag

./: .env-TEMPLATE  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  GEMINI.md  README.md  Transcription.py  Work.py  agent.py  build_ext_package.sh  build_ext_source.sh  deploy-nginx.sh  deploy.sh  docker-compose.yaml  docker-compose.yml  framework.py  index.html  llm.py  package-lock.json  package.json  package_ext.sh  pre-commit.sh  pyproject.toml  requirements.txt  rollup.config.mjs  run-instances.sh  run_api.sh  run_docker_prod.sh  run_docker_staging.sh  tools.py
.github/instructions/: .instructions.md
docs/: deployment-setup.md
nginx/: README.md  ask-api.readquran.app.conf
src/frontend/: .gitignore  App.css  App.jsx  README.md
src/frontend/app/: index.html  index.js
src/frontend/extension/: README.md  background.js  bundle.js  bundle.js.map  content.js  index.html  index.js  manifest.json
src/frontend/shared/: lib.js
src/frontend/ui/: AboutModal.svelte  App.svelte  Message.svelte
src/quranai/: __init__.py  agent.py  llm.py  server.py  ui_status.py  utils.py
src/quranai/agent/: agent.py
src/quranai/agent/.adk/: session.db
src/quranai/agents/: adk_runner.py
src/quranai/agents/agent/: agent.py
src/quranai/agents/deepdive_agent/: __init__.py  agent.py
src/quranai/data/: prompt_minimal.yaml  prompt_quran.yaml
src/quranai/data/quranai.chroma/b8c74c8b-0688-42d8-96fa-02ba5ad766a6/: index_metadata.pickle
src/quranai/quran/: agent.py  corpus.py  tools.py
src/scripts/: build_chapter_intro_index.py  build_verse_index.py  check_quran_api_works.py
